data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1933.wast
;; 4. **Test Description**:    - **Constraint Checked**: Correct handling of backward jump to loop.    - **Details**: Design a `br_table` which conditionally jumps back to a loop start. Validate if the operand stack is correctly adjusted based on the loop's input type.    - **Relation to Edge Case**: Ensures backward jumps properly manage stack and loop input concerns, testing stack management integrity.

(assert_invalid
  (module
    (func $backward-jump-loop
      (loop (result i32)
        (br_if 0 (i32.const 1) (i64.const 0)) 
      )
    )
  )
  "type mismatch"
)